# MorphoNAS-PL

./: .gitignore  README.md  pyproject.toml
code/: __init__.py  comparison_analysis.ipynb
code/MorphoNAS/: README.md  __init__.py  cma_optimizer.py  experimentA.py  experimentA_analysis.py  experimentB.py  experimentB_analysis.py  experiment_runner.py  fitness_functions.py  genetic_algorithm.py  genome.py  grid.py  hooks.py  main.py  neural_propagation.py  optimizer.py  regenerate_displays.py
code/MorphoNAS_PL/: __init__.py  (+19 more)
scripts/: analyze_B0_5plus_comprehensive.py  analyze_B0_5plus_gate_simulation.py  analyze_B0_6_cross_variant.py  analyze_B0_6_nonstationary.py  analyze_B0_6_pilot.py  analyze_B1_coevolution.py  analyze_B2_random_rnn.py  analyze_acrobot_extended.py  analyze_acrobot_ns_sweep.py  analyze_acrobot_static_sweep.py  analyze_anti_hebbian_mechanism.py  analyze_ceiling_corrected.py  analyze_genome_prediction.py  analyze_topology_regression.py  consolidate_B0_5plus.py  extract_pool.py  generate_development_figure.py  generate_paper_figures.py  migrate_sweep_to_parquet.py  profile_B0_6_nonstationary.py  run_B0_5_grid_sweep.py  run_B0_5_natural_pool.py  run_B0_6_adaptation.py  run_B0_6_dose_response.py  run_B0_6_nonstationary.py  run_B1_coevolution.py  run_B2_random_rnn_pool.py  run_B2_random_rnn_sweep.py  run_acrobot_extended.py  run_acrobot_nonstationary.py  run_acrobot_pool.py  run_acrobot_sweep.py  run_acrobot_temporal.py  run_acrobot_temporal_ns_noplasticity.py  run_acrobot_temporal_oracle.py  run_acrobot_temporal_static.py  setup_B0_5plus.py
(+9400 files in other folders)
